--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,6 +48,10 @@ body {
     background-image: url("/Assets/Icons/List-Sort-Type-Icon-Increase-Hover.svg");
 }
 
+.list-sort-type {
+    padding: 5px;
+}
+
 .input-container {
     margin: 11px 22px 0px 28px;
     min-height: 40px;
@@ -69,6 +73,7 @@ body {
     outline: none;
     margin: 0px 5px 0px 0px;
     font-size: 14px;
+    width: 205px;
 }
 
 .input-bar-delete-button {
@@ -80,17 +85,17 @@ body {
     border-radius: 50%;
     border: none;
     background-color: transparent;
+    background-image: url("/Assets/Icons/Input-Bar-Delete-Icon-Unhover.svg");
 }
 
 .input-bar-delete {
     width: 20px;
     height: 20px;
     margin: auto;
-    background-image: url("/Assets/Icons/Input-Bar-Delete-Icon-Unhover.svg");
     border-radius: 50%;
 }
 
-.input-bar-delete:hover {
+.input-bar-delete-button:hover {
     background-image: url("/Assets/Icons/Input-Bar-Delete-Icon-Hover.svg");
 }
 
@@ -127,7 +132,6 @@ body {
 .list {
     list-style-type: none;
     margin-left: 27px;
-    margin-bottom: 10px;
     font-size: 14px;
 }
 
@@ -149,15 +153,19 @@ body {
     padding: 0;
     margin-top: 10px;
     margin-right: 30px;
-    width: 20px;
+    min-width: 20px;
     height: 20px;
-    border-radius: 50%;
     border: none;
     background-color: transparent;
+    background-image: url("/Assets/Icons/Input-Bar-Delete-Icon-Unhover.svg");
 }
 
-.list-element-delete {
-    width: 20px;
-    height: 20px;
-    margin: auto;
+.list-element-delete-button:hover {
+    background-image: url("/Assets/Icons/Input-Bar-Delete-Icon-Hover.svg");
+}
+
+select {
+    appearance: none;
+    border: none;
+    outline: none;
 }
